[package]
authors = ["Stijn Frishert <info@stijnfrishert.com>"]
description = "Library for interfacing with LSDJ files and memory"
edition = "2021"
name = "lsdj"
repository = "https://github.com/stijnfrishert/lsdj-rs"
version = "1.0.0"

[dependencies]
system-interface = "0.20.0"
thiserror = "1.0.30"
ux = "0.1.4"

[dev-dependencies]
anyhow = "1.0.57"
