[package]
authors = ["Stijn Frishert <info@stijnfrishert.com>"]
categories = ["encoding"]
description = "Library for interfacing with LSDJ files and memory"
edition = "2021"
homepage = "https://github.com/stijnfrishert/lsdj-rs"
keywords = ["lsdj", "chiptune", "gameboy", "music"]
license = "MIT OR Apache-2.0"
name = "lsdj"
readme = "README.md"
repository = "https://github.com/stijnfrishert/lsdj-rs"
version = "1.0.0"

[dependencies]
system-interface = "0.20.0"
thiserror = "1.0.30"
ux = "0.1.4"

[dev-dependencies]
anyhow = "1.0.57"
