[package]
authors = ["Stijn Frishert <info@stijnfrishert.com>"]
categories = ["command-line-utilities"]
description = "A set of tools for working with LSDJ files"
edition = "2021"
homepage = "https://github.com/stijnfrishert/lsdj-rs"
keywords = ["lsdj", "chiptune", "gameboy", "music"]
license = "MIT OR Apache-2.0"
name = "lsdj-tools"
readme = "README.md"
repository = "https://github.com/stijnfrishert/lsdj-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
clap = {version = "3.0.10", features = ["derive"]}
lsdj = {version = "0.1.0", path = "../lsdj"}
mizu-core = {git = "https://github.com/Amjad50/mizu.git", rev = "c4fd89dc9cf209c6e28a5d420bfd0d07d6977007"}
walkdir = "2.3.2"
wav = "1.0.0"
wild = "2.0.4"
