[package]
authors = ["Stijn Frishert <info@stijnfrishert.com>"]
categories = ["command-line-utilities"]
description = "A set of tools for working with LSDJ files"
edition = "2021"
homepage = "https://github.com/stijnfrishert/lsdj-rs"
keywords = ["lsdj", "chiptune", "gameboy", "music"]
license = "MIT OR Apache-2.0"
name = "lsdj-tools"
readme = "README.md"
repository = "https://github.com/stijnfrishert/lsdj-rs"
version = "0.1.0"

[dependencies]
anyhow = "1.0.56"
clap = {version = "3.0.10", features = ["derive"]}
humantime = "2.1.0"
lsdj = {version = "0.1.0", path = "../lsdj"}
mizu-core = {git = "https://github.com/Amjad50/mizu.git", rev = "c03894b0a3cb63ce1907f5e5d1b994dd0901aa3c"}
walkdir = "2.3.2"
wav = "1.0.0"
wild = "2.0.4"
