[package]
authors = ["Stijn Frishert <info@stijnfrishert.com>"]
categories = ["command-line-utilities"]
description = "A set of tools for working with LSDJ files"
edition = "2024"
homepage = "https://github.com/stijnfrishert/lsdj-rs"
keywords = ["lsdj", "chiptune", "gameboy", "music"]
license = "MIT OR Apache-2.0"
name = "lsdj-tools"
readme = "README.md"
repository = "https://github.com/stijnfrishert/lsdj-rs"
version = "0.2.1"

[dependencies]
anyhow = "1.0.56"
clap = { version = "4.5.38", features = ["derive"] }
lsdj = { version = "0.1.1", path = "../lsdj" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.3.2"
wild = "2.0.4"
colored = "3.0.0"
sha2 = "0.10.9"
